--- a/index1.html
+++ b/index1.html
@@ -44,7 +44,10 @@
 							<p><input class="edit2" name="login" placeholder="Фактическое место проживания"></p>
 						</div>
 					</form><br><br> 
+					<div class="btn">
+						<a href="C:\Users\reigh\OneDrive\Рабочий стол\frontend\html_css\homework\index3.html">
 					<button class="get-btn"> Далее</button>
+					</a>
 				</div>
 			</div>
 			</html>	
