--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mega-Srore:Регистрация</title>
-	<link rel="stylesheet" href="style1.css">
+	<link rel="stylesheet" href="style3.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -18,32 +18,30 @@
 				<h3 class="title">Данные о ваших доходах</h3>
 				<form>
 					<div class="inp">
-						<p><input class="edit" name="login" placeholder="Фамилия"></p> <br>
-						<p><input class="edit" name="login" placeholder="Имя"></p><br>
-						<p><input class="edit" name="login" placeholder="Отчество"></p>
+						<p><input class="edit1" name="login" placeholder="Наименование организации"></p> 
+						<p><input class="edit2" name="login" placeholder="Должность"></p> 
+						<p><input class="edit3" name="login" placeholder="Заработная плата в месяц"></p>
+						<p><input class="edit4" name="login" placeholder="Заработная Плата за посл. 3 месяца"></p>
 					</div>
 				</form>
-
+				<form>
 				<div class="container">
-					<p>Паспортные данные</p><br>
-					<form>
-						<div class="inp1">
-							<p><input class="edit" name="login" placeholder="Дата рождения"></p> 
-							<p><input class="edit1" name="login" placeholder="Место проживания по прописке"></p>
-							<div class="inp2">
-								<p><input class="edit" name="login" placeholder="Серийный номер AN/ID"></p>
-								<p><input class="edit" name="login" placeholder="ИНН"></p> <br>
-								<p><input class="edit" name="login" placeholder="Дата получения"></p><br>
-							</div><br><br>
-							<div class="inp3">
-								<p><input class="edit" name="login" placeholder="Контактный номер"></p>
-								<p><input class="edit" name="login" placeholder="Электронный адрес"></p> 
-								<p><input class="edit" name="login" placeholder="Наименование банка" ></p>
-							</div>	<br><br>
-							<p><input class="edit2" name="login" placeholder="Фактическое место проживания"></p>
-						</div>
-					</form><br><br> 
+					<p>Сведения о кредите</p>
+					<div class="inp1">
+							<p><input class="edit5" name="login" placeholder="Покупка телефона ( наименование товара)"></p> 
+							<p><input class="edit6" name="login" placeholder="Стоимость товара"></p>
+							<p><input class="edit7" name="login" placeholder="Количество товара"></p>
+							<p><input class="edit8" name="login" placeholder="Итого сумма кредита"></p> 
+							<p><input class="edit9" name="login" placeholder="Вид кредита"></p>
+							<p><input class="edit10" name="login" placeholder="Срок кредита ( мес)"></p>
+							<p><input class="edit11" name="login" placeholder="Точка получения товара"></p> 
+					</div>	
+				</div>
+				</form>
+				<div>
+					<a href="file:///C:/Users/reigh/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/frontend/html_css/homework/index5.html">
 					<button class="get-btn"> Далее</button>
+					</a>
 				</div>
 			</div>
 			</html>	
