--- a/index5.html
+++ b/index5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mega-Srore:Регистрация</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style5.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 		<div class="services_item">
 		<div class="text_content">
         <h2 class="title">Введите код подтверждения</h2>        
-        <p class="code-text">На ваш номер отправлен SMS с персональным кодом</p>
+        <p class="code-text">На ваш номер отправлен SMS с <br> персональным кодом</p>
         <div class="field">
             <input type="text" maxlength="1" class="code-box" value="3">
             <input type="text" maxlength="1" class="code-box" value="3">
