--- a/index4.html
+++ b/index4.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mega-Srore:Регистрация</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style4.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -16,8 +16,8 @@
 		<div class="services_item">
 		<div class="text_content">
 			<h3 class="title">Ваша заявка отправлена </h3>
-			<p> В ближайшее время с вами свяжутся </p>
-			<img src="check.jpg" alt="calendar">
+			<p class="grey_content"> В ближайшее время с вами свяжутся </p>
+			<img class="img_content" src="check.svg" alt="calendar">
 			<button class="get-btn"> Ok</button>
 		</div>
 	</html>	
