--- a/index1.html
+++ b/index1.html
@@ -43,9 +43,9 @@
 							</div>	<br><br>
 							<p><input class="edit2" name="login" placeholder="Фактическое место проживания"></p>
 						</div>
-					</form><br><br> 
+					</form> <br> 
 					<div class="btn">
-						<a href="C:\Users\reigh\OneDrive\Рабочий стол\frontend\html_css\homework\index3.html">
+						<a href="file:///C:/Users/reigh/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/frontend/html_css/homework/index3.html" target="_blank">
 					<button class="get-btn"> Далее</button>
 					</a>
 				</div>
