--- a/index4.html
+++ b/index4.html
@@ -18,6 +18,10 @@
 			<h3 class="title">Ваша заявка отправлена </h3>
 			<p class="grey_content"> В ближайшее время с вами свяжутся </p>
 			<img class="img_content" src="check.svg" alt="calendar">
-			<button class="get-btn"> Ok</button>
+			<div class="btn">
+				<a href="file:///C:/Users/reigh/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/frontend/html_css/homework/index1.html" target="_blank"></a>
+				<button class="get-btn"> Ok</button>
+			</a>
+			</div>
 		</div>
 	</html>	
