--- a/index5.html
+++ b/index5.html
@@ -23,7 +23,12 @@
             <input type="text" maxlength="1" class="code-box" value="3">
             <input type="text" maxlength="1" class="code-box" value="3">
         </div>
-        <button class="get-btn">Далее</button>
+        <div class="btn">
+            <a href="file:///C:/Users/reigh/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/frontend/html_css/homework/index1.html" target="_blank">
+             <button class="get-btn">Далее</button>
+            </a>
+        
     </div>
+   
 </body>
 </html>
