--- a/index3.html
+++ b/index3.html
@@ -38,8 +38,8 @@
 					</div>	
 				</div>
 				</form>
-				<div>
-					<a href="file:///C:/Users/reigh/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/frontend/html_css/homework/index5.html">
+				<div class="btn">
+					<a href="file:///C:/Users/reigh/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/frontend/html_css/homework/index4.html">
 					<button class="get-btn"> Далее</button>
 					</a>
 				</div>
