--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p><input class="edit" name="login" placeholder="+996 555 000 000"></p>
 			</form>
 			<div class="btn">
-				<a href="file:///C:/Users/reigh/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/frontend/html_css/homework/index5.html" target="_blank">
+				<a href="index1.html" target="_blank">
 			<button  class="get-btn"> Далее</button>
 			</a>
 		</div>
